--- a/hadui/rating.html
+++ b/hadui/rating.html
@@ -16,8 +16,9 @@
     </div>
     <div class="mui--text-accent">
       every time you open a new window displaying this page, <br />
-      the rank is initialize to <i>0</i> as local state. <br />
-      essential the same when you refresh the browser window.
+      the rank is initialized to <i>0</i> as local state. <br />
+      refreshing the browser window is essentially the same as <br />
+      opening a new window right after the old one closed.
     </div>
   </div>
   <button id="uprate" class="mui-btn mui-btn--fab mui-btn--primary">👍🏻</button>
